// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event should not render announcement when none is passed in 1`] = `
<styled.div>
  <ContentPanel
    title="Description"
  >
    <div
      className="event-description"
    >
      <ContentEditableWrapper
        propName="description"
        type="textarea"
      >
        <ReactMarkdown
          astPlugins={Array []}
          escapeHtml={true}
          plugins={Array []}
          rawSourcePos={false}
          renderers={Object {}}
          skipHtml={false}
          source="None yet."
          sourcePos={false}
          transformLinkUri={[Function]}
        />
      </ContentEditableWrapper>
      <img />
    </div>
  </ContentPanel>
  <ContentPanel
    title="Agenda"
  >
    <div
      className="event-agenda"
    >
      <ContentEditableWrapper
        defaultValue="somethings"
        propName="agenda"
        type="textarea"
      >
        <ReactMarkdown
          astPlugins={Array []}
          escapeHtml={false}
          plugins={Array []}
          rawSourcePos={false}
          renderers={Object {}}
          skipHtml={false}
          source="somethings"
          sourcePos={false}
          transformLinkUri={[Function]}
        />
      </ContentEditableWrapper>
    </div>
  </ContentPanel>
  <ContentPanel
    title="Meet the organizers"
  >
    <Members>
      <UserProfile
        user={
          Object {
            "id": 1,
          }
        }
      />
    </Members>
  </ContentPanel>
  <ContentPanel
    title="Become a sponsor"
  >
    <TargetAudience
      className="target-audience"
      event={
        Object {
          "agenda": "somethings",
          "announcements": Object {},
        }
      }
      sponsorship_offer={Object {}}
    />
    <Component
      className="btn-inline"
      inverted={true}
      to="/e/undefined/sponsors/new"
    >
      View sponsorship options
    </Component>
  </ContentPanel>
</styled.div>
`;

exports[`Event should render correctly 1`] = `
<styled.div>
  <ContentPanel
    title="Description"
  >
    <div
      className="event-description"
    >
      <ContentEditableWrapper
        propName="description"
        type="textarea"
      >
        <ReactMarkdown
          astPlugins={Array []}
          escapeHtml={true}
          plugins={Array []}
          rawSourcePos={false}
          renderers={Object {}}
          skipHtml={false}
          source="None yet."
          sourcePos={false}
          transformLinkUri={[Function]}
        />
      </ContentEditableWrapper>
      <img />
    </div>
  </ContentPanel>
  <ContentPanel
    title="Agenda"
  >
    <div
      className="event-agenda"
    >
      <ContentEditableWrapper
        defaultValue="somethings"
        propName="agenda"
        type="textarea"
      >
        <ReactMarkdown
          astPlugins={Array []}
          escapeHtml={false}
          plugins={Array []}
          rawSourcePos={false}
          renderers={Object {}}
          skipHtml={false}
          source="somethings"
          sourcePos={false}
          transformLinkUri={[Function]}
        />
      </ContentEditableWrapper>
    </div>
  </ContentPanel>
  <Component
    announcements={
      Object {
        "data": Array [
          Object {
            "id": 1,
          },
        ],
      }
    }
    recipient_type="Event"
  />
  <ContentPanel
    title="Meet the organizers"
  >
    <Members>
      <UserProfile
        user={
          Object {
            "id": 1,
          }
        }
      />
    </Members>
  </ContentPanel>
  <ContentPanel
    title="Become a sponsor"
  >
    <TargetAudience
      className="target-audience"
      event={
        Object {
          "agenda": "somethings",
          "announcements": Object {
            "data": Array [
              Object {
                "id": 1,
              },
            ],
          },
        }
      }
      sponsorship_offer={Object {}}
    />
    <Component
      className="btn-inline"
      inverted={true}
      to="/e/undefined/sponsors/new"
    >
      View sponsorship options
    </Component>
  </ContentPanel>
</styled.div>
`;
